# hotdog

./: README.md  pyproject.toml
public/: index.html
src/hotdog/: main.py  utils.py
tests/: test_max_prediction.py
